components/input.scss
@import "../variables";

.input {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  flex: 0 0 auto;
  width: 100%;
  min-width: 0;
  height: $input--height;
  min-height: unset;
  padding: $input--padding-y $input--padding-x;
  margin: 0;
  font-size: $input--font-size;
  font-weight: 400;
  line-height: $input--line-height;
  color: $color-main;
  white-space: nowrap;
  vertical-align: middle;
  cursor: text;
  border-color: $border-color;
  border-style: solid;
  border-width: $input--border-width;
  border-radius: $border-radius-base * $scale + $unit;
  outline: none;
  transition: $transition-default;

  @if ($has-dark) {
    .is-dark & {
      color: $color-main-reverse;
      border-color: $border-color-reverse;
    }
  }

  &.is-xs {
    height: $input--height--xs;
    padding: $input--padding-y--xs $input--padding-x--xs;
    font-size: $input--font-size--xs;
  }

  &.is-sm {
    height: $input--height--sm;
    padding: $input--padding-y--sm $input--padding-x--sm;
    font-size: $input--font-size--sm;
  }

  &.is-lg {
    height: $input--height--lg;
    padding: $input--padding-y--lg $input--padding-x--lg;
    font-size: $input--font-size--lg;
  }

  &.is-xl {
    height: $input--height--xl;
    padding: $input--padding-y--xl $input--padding-x--xl;
    font-size: $input--font-size--xl;
  }
}

.input-wrapper {
  position: relative;
  box-sizing: border-box;
  display: inline-flex;
  flex: 0 0 auto;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  min-width: 0;
  height: $input--height;
  min-height: unset;
  padding: $input--padding-y $input--padding-x;
  margin: 0;
  font-size: $input--font-size;
  font-weight: 400;
  line-height: $input--line-height;
  color: $color-main;
  border-color: $border-color;
  border-style: solid;
  border-width: $input--border-width;
  border-radius: $border-radius-base * $scale + $unit;
  outline: none;
  transition: $transition-default;

  @if ($has-dark) {
    .is-dark & {
      color: $color-main-reverse;
      border-color: $border-color-reverse;
    }
  }

  .input {
    flex: auto;
    width: auto;
    padding: 0;
    border-color: transparent;
    border-style: none;
    border-width: 0;
  }

  .input-prefix,
  .input-suffix {
    position: relative;
    box-sizing: border-box;
    flex: none;
    align-items: center;
  }

  .input-prefix {
    display: inline-flex;
    justify-content: flex-start;
    margin-right: $input--padding-x;
  }

  .input-suffix {
    display: inline-flex;
    justify-content: flex-end;
    margin-left: $input--padding-x;
  }

  &.is-xs {
    height: $input--height--xs;
    padding: $input--padding-y--xs $input--padding-x--xs;
    font-size: $input--font-size--xs;
  }

  &.is-sm {
    height: $input--height--sm;
    padding: $input--padding-y--sm $input--padding-x--sm;
    font-size: $input--font-size--sm;
  }

  &.is-lg {
    height: $input--height--lg;
    padding: $input--padding-y--lg $input--padding-x--lg;
    font-size: $input--font-size--lg;
  }

  &.is-xl {
    height: $input--height--xl;
    padding: $input--padding-y--xl $input--padding-x--xl;
    font-size: $input--font-size--xl;
  }
}

.input-placeholder {
  padding: 0;
  font-size: $input--font-size;
  font-weight: 400;
  line-height: $input--line-height;
  color: $color-secondary;
  text-overflow: ellipsis;

  @if ($has-dark) {
    .is-dark & {
      color: $color-secondary-reverse;
    }
  }

  .is-xs & {
    font-size: $input--font-size--xs;
    line-height: $input--line-height--xs;
  }

  .is-sm & {
    font-size: $input--font-size--sm;
    line-height: $input--line-height--sm;
  }

  .is-lg & {
    font-size: $input--font-size--lg;
    line-height: $input--line-height--lg;
  }

  .is-xl & {
    font-size: $input--font-size--xl;
    line-height: $input--line-height--xl;
  }
}

